2012-11-19  Sofiane Naci  <sofiane.naci@arm.com>

	* config/aarch64/aarch64.c
	(aarch64_output_mi_thunk): Refactor to generate RTL patterns.

2012-11-19  Mans Rullgard  <mans@mansr.com>

	PR target/55276
	* config/rs6000/rs6000.c (rs6000_stack_info): Always set vrsave_mask
	for TARGET_ALTIVEC_ABI.  Zero vrsave_save_offset if
	!TARGET_ALTIVEC_VRSAVE.
	(rs6000_emit_prologue): For SAVE_INLINE_VLRs, check vrsave_size
	not vrsave_mask.

2012-11-19  David Edelsohn  <dje.gcc@gmail.com>

	PR bootstrap/55384
	* system.h (vec_free): Undef.

2012-11-19  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/54630
	* tree-ssa-coalesce.c (coalesce_ssa_name): Remove static
	keyword from ssa_name_hash var.

2012-11-19  Maxim Kuznetsov  <maxim.kuznetsov@intel.com>
	    Kirill Yukhin  <kirill.yukhin@intel.com>
	    Michael Zolotukhin  <michael.v.zolotukhin@intel.com>

	* doc/md.texi: Document define_subst.
	* gensupport.c (MAX_OPERANDS): New define.
	(operand_data): New.
	(match_operand_entries_in_pattern): New.
	(used_operands_numbers): New.
	(subst_true): New.
	(subst_false): New.
	(define_subst_queue): New.
	(define_subst_tail): New.
	(define_subst_attr_queue): New.
	(define_subst_attr_tail): New.
	(has_subst_attribute): New.
	(subst_pattern_match): New.
	(get_alternatives_number): New.
	(alter_output_for_subst_insn): New.
	(alter_attrs_for_subst_insn): New.
	(process_substs_on_one_elem): New.
	(subst_dup): New.
	(process_define_subst): New.
	(duplicate_alternatives): New.
	(duplicate_each_alternative): New.
	(constraints_handler_t): New typedef.
	(alter_constraints): New.
	(adjust_operands_numbers): New.
	(replace_duplicating_operands_in_pattern): New.
	(remove_from_queue): New.
	(process_rtx): Handle define_subst and define_subst_attr.
	(change_subst_attribute): New.
	(alter_predicate_for_insn): Fix formatting.
	(alter_attrs_for_insn): Likewise.
	(alter_output_for_insn): Likewise.
	(mark_operands_from_match_dup): New.
	(mark_operands_used_in_match_dup): New.