@@ -1,3 +1,14 @@
+2012-11-19  Aldy Hernandez  <aldyh@redhat.com>
+
+	* trans-mem (collect_bb2reg): Stop scanning at irrevocable blocks.
+	(get_bb_regions_instrumented): Add new traverse_clone argument and
+	use it.
+	(expand_regions_1): Same.
+	(expand_region): Same.
+	(execute_tm_mark): Pass new argument to expand_regions.
+	(expand_block_edges): Pass new argument to
+	get_bb_regions_instrumented.
+
 2012-11-19  Sofiane Naci  <sofiane.naci@arm.com>
 
 	* config/aarch64/aarch64.c
